--- a/Phone/main/res/layout/register_enter_account_info.xml
+++ b/Phone/main/res/layout/register_enter_account_info.xml
@@ -36,13 +36,52 @@
                 android:layout_below="@+id/account_info_error_label"
                 android:text="@string/account_info_label_one" />
 
+            <LinearLayout
+                android:id="@+id/account_number_fields"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_below="@+id/account_info_label_one_label"
+                android:layout_marginTop="@dimen/between_related_elements_padding"
+                android:orientation="horizontal"
+                android:visibility="invisible" >
+
+                <com.discover.mobile.common.customui.SsnEditText
+                    android:id="@+id/account_number_field_one"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_marginRight="@dimen/between_related_elements_padding"
+                    android:imeOptions="actionNext"
+                    android:nextFocusDown="@+id/account_number_field_two" />
+
+                <com.discover.mobile.common.customui.SsnEditText
+                    android:id="@+id/account_number_field_two"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_marginRight="@dimen/between_related_elements_padding"
+                    android:imeOptions="actionNext" />
+
+                <com.discover.mobile.common.customui.SsnEditText
+                    android:id="@+id/account_number_field_three"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_marginRight="@dimen/between_related_elements_padding"
+                    android:imeOptions="actionNext" />
+
+                <com.discover.mobile.common.customui.SsnEditText
+                    android:id="@+id/account_number_field_four"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:imeOptions="actionNext" />
+            </LinearLayout>
+
             <com.discover.mobile.common.customui.UsernameOrAccountNumberEditText
                 android:id="@+id/account_info_main_input_field"
                 android:layout_width="fill_parent"
                 android:layout_height="wrap_content"
                 android:layout_below="@+id/account_info_label_one_label"
                 android:layout_marginTop="@dimen/between_related_elements_padding"
-                android:imeOptions="actionDone" />
+                android:imeOptions="actionDone"
+                android:visibility="visible" />
 
             <TextView
                 android:id="@+id/account_information_input_info_label"
@@ -55,7 +94,7 @@
                 android:id="@+id/account_info_card_account_number_error_label"
                 style="@style/error_label"
                 android:layout_below="@+id/account_info_main_input_field"
-                android:text="@string/doesnt_match_records" >
+                android:text="@string/invalid_input" >
 
                 <requestFocus />
             </TextView>
@@ -102,7 +141,7 @@
                 android:id="@+id/account_info_ssn_error_label"
                 style="@style/error_label"
                 android:layout_below="@+id/account_info_ssn_input_field"
-                android:text="@string/doesnt_match_records" />
+                android:text="@string/invalid_input" />
 
             <TextView
                 android:id="@+id/account_info_dob_label"
@@ -115,7 +154,7 @@
                 android:id="@+id/account_info_dob_year_error_label"
                 style="@style/error_label"
                 android:layout_below="@+id/account_info_birth_date_picker"
-                android:text="@string/doesnt_match_records" />
+                android:text="@string/invalid_input" />
 
             <LinearLayout
                 android:id="@+id/account_info_button_row"
@@ -156,7 +195,7 @@
                 android:id="@+id/account_info_expiration_date_error_label"
                 style="@style/error_label"
                 android:layout_below="@+id/account_info_card_exp_date_picker"
-                android:text="@string/doesnt_match_records" />
+                android:text="@string/invalid_input" />
 
             <com.discover.mobile.common.customui.DobDatePicker
                 android:id="@+id/account_info_birth_date_picker"
