--- a/Phone/main/res/values/errors_http_only.xml
+++ b/Phone/main/res/values/errors_http_only.xml
@@ -1,4 +1,8 @@
 <resources>
+    <!--General HTTP Error Strings  -->
+    <string name="error_503_title">We\'re Currently Performing System Maintenance</string>
+    
+    <!--Card HTTP Error Strings  -->
 	<string name="error_401">Sorry. The User ID and/or Password does not match our records, or you are not registered. Please try again.</string>
 	<string name="error_403">The request has been understood but has been refused due to incompatible client version.</string>
 	<string name="error_415">Unsupported Media Type</string>
@@ -6,8 +10,8 @@
 	
 	<string name="error_500">&lt;h3&gt;Discover.com Mobile Error&lt;/h3&gt;We\'re sorry. Your request cannot be completed at this time. We sincerely apologize for this inconvenience and are working to resolve this issue soon. For further assistance please call 1-877-742-7822</string>
 	<string name="error_503">We\'re sorry. Our services are unavailable at this time.&lt;br/&gt;We apologize for any inconvenience.</string>
-	<!--
-	<string name="error_500"><h3>Discover.com Mobile Error</h3>We're sorry. Your request cannot be completed at this time. We sincerely apologize for this inconvenience and are working to resolve this issue soon. For further assistance please call 1-877-742-7822</string>
-	<string name="error_503">We're sorry. Our services are unavailable at this time.&lt;br/&gt;We apologize for any inconvenience.</string>
-	-->
+	
+	<!-- Bank HTTP Error Strings  -->
+	<string name="bank_error_503_message">We are currently performing system maintenance. We are working to keep the app running smoothly; unfortunately, this means your request cannot be completed at this time\n\nPlease try again on Sunday after 6am ET or on Monday-Saturday after 4am ET.</string>
+	
 </resources>
