US3745 : Added disabled call to action button. Added text watchers to all fields on step 1 of registration so that upon the form info becomming complete and valid, the continue button will be enabled.

--- a/Phone/main/res/drawable/call_to_action_button.xml
+++ b/Phone/main/res/drawable/call_to_action_button.xml
@@ -5,6 +5,8 @@
         android:drawable="@drawable/orange_button"/>
     <item android:state_pressed="true"
         android:drawable="@drawable/orange_button_pressed"/>
+    <item android:state_enabled="false" 
+        android:drawable="@drawable/orange_button_disabled"/>
     
 	<item android:drawable="@drawable/orange_button"/>
 </selector>
