--- a/Phone/main/res/layout/register_enter_account_info.xml
+++ b/Phone/main/res/layout/register_enter_account_info.xml
@@ -171,7 +171,8 @@
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:onClick="validateInfoAndSubmitOnSuccess"
-                    android:text="@string/continue_text" />
+                    android:text="@string/continue_text" 
+                    android:enabled="false"/>
 
                 <Button
                     android:id="@+id/account_info_cancel_button"
