--- a/Phone/main/res/layout/simple_list_item.xml
+++ b/Phone/main/res/layout/simple_list_item.xml
@@ -2,16 +2,15 @@
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
-    style="@style/default_list_item">
+    style="@style/default_list_item"
+    android:paddingBottom="@dimen/table_inner_padding">
 
     <TextView
         android:id="@+id/balance_label"
-    	style="@style/sub_copy_small"
+    	style="@style/field_copy_small"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_alignParentLeft="true"
-        android:text="Credit Available" 
-        android:textStyle="bold"/>
+        android:layout_alignParentLeft="true"/>
 
     <TextView
         android:id="@+id/balance_value"
@@ -20,16 +19,29 @@
         android:layout_height="wrap_content"
         android:layout_alignLeft="@+id/balance_label"
         android:layout_below="@+id/balance_label"
-        android:layout_toLeftOf="@+id/action_text"
-        android:text="$9,999.00" />
-
-    <TextView
-        android:id="@+id/action_text"
-        style="@style/blue_hyperlink_extra_small"
+        android:layout_toLeftOf="@+id/action_text"/>
+    
+    <LinearLayout 
         android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_alignParentRight="true"
+	    android:layout_height="wrap_content"
+	    android:layout_alignParentRight="true"
         android:layout_alignBottom="@+id/balance_value"
-        android:text="Learn More" />
+	    android:orientation="horizontal"
+	    android:gravity="bottom">
+	        
+	    <ImageView
+	        android:id="@+id/divider_line"
+	        android:layout_width="0.5dp"
+	        android:layout_height="14sp"
+	        android:background="@color/field_stroke" 
+	        android:visibility="gone"/>
+
+	    <TextView
+	        android:id="@+id/action_text"
+	        style="@style/blue_hyperlink_extra_small"
+	        android:layout_width="wrap_content"
+	        android:layout_height="wrap_content"
+	        android:layout_marginLeft="@dimen/between_related_elements_padding"/>
+    </LinearLayout>
 
 </RelativeLayout>
