--- a/Phone/main/res/layout/account_summary.xml
+++ b/Phone/main/res/layout/account_summary.xml
@@ -34,6 +34,7 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_marginTop="@dimen/orange_button_margin_top"
+            android:layout_marginBottom="@dimen/orange_button_margin_top"
             android:text="@string/feedback_text" />
     </LinearLayout>
 
