--- a/Phone/main/res/layout/login_start.xml
+++ b/Phone/main/res/layout/login_start.xml
@@ -73,7 +73,7 @@
 		            android:textAppearance="?android:attr/textAppearanceMedium"
 		             style="@style/body_copy"/>
 	
-		        <EditText
+		        <com.discover.mobile.common.customui.NonEmptyEditText
 		            android:id="@+id/username_field"
 		            android:layout_width="match_parent"
 		            android:layout_height="48dp"
@@ -110,7 +110,7 @@
 		            android:text="@string/show"
 		            android:textColor="@color/blue"/>
 	
-		        <EditText
+		        <com.discover.mobile.common.customui.NonEmptyEditText
 		            android:id="@+id/password_field"
 		            android:layout_width="match_parent"
 		            android:layout_height="48dp"
@@ -268,30 +268,31 @@
 	    android:id="@+id/login_bottom_button_row"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
+           android:orientation="horizontal"
            android:layout_alignParentBottom="true" 
            android:background="@color/transparentGray">
 
 		<Button
 		    android:id="@+id/customer_service_button"
-		    android:layout_width="fill_parent"
+		    android:layout_width="0dp"
 		    android:layout_height="wrap_content"
-		    android:layout_weight=".33"
+		    android:layout_weight="0.33"
 		    style="@style/login_bottom_bar_button"
 		    android:text="@string/customer_service" />
 
 		<Button
 		    android:id="@+id/privacy_and_security_button"
-		    android:layout_width="fill_parent"
+		    android:layout_width="0dp"
 		    android:layout_height="wrap_content"
-		    android:layout_weight=".33"
+		    android:layout_weight="0.33"
 		    style="@style/login_bottom_bar_button"
 		    android:text="@string/privacy_and_security" />
 
 		<Button
 		    android:id="@+id/register_now_or_atm_button"
-		    android:layout_width="fill_parent"
-		    android:layout_height="wrap_content"
-		    android:layout_weight=".33"
+		    android:layout_width="0dp"
+		    android:layout_height="fill_parent"
+		    android:layout_weight="0.34"
 		    style="@style/login_bottom_bar_button"
 		    android:text="@string/register_now"/>
 
