--- a/Commons/main/res/values/dimens.xml
+++ b/Commons/main/res/values/dimens.xml
@@ -3,5 +3,6 @@
 
     <dimen name="edit_text_corner_radius">5dp</dimen>
     <dimen name="edit_text_stroke_width">1dp</dimen>
-
+    <dimen name="input_field_height">38dp</dimen>
+    
 </resources>
