--- a/Phone/main/res/layout/modal_default_top_view.xml
+++ b/Phone/main/res/layout/modal_default_top_view.xml
@@ -2,7 +2,8 @@
 <ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="fill_parent"
     android:layout_height="fill_parent"
-    android:padding="@dimen/forms_inner_padding">
+    android:paddingLeft="@dimen/forms_inner_padding"
+    android:paddingRight="@dimen/forms_inner_padding">
 
     <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
 	    android:layout_width="fill_parent"
