US3748 - TA10580 - TA8728 - TA10593 - Add step navigation item. This component has been added and tested. I had to modify the original class to adjust its padding and resolve some private methods to public. Updated the layout to reflect the 13.2 comps. Added new input fields that validate themselves as confirmation fields. Updated styles.xml to use externalized colors. ChangedCredentialStrengthEditText to extend validated input field for convieneint access to a isValid method. Updated input validator with a static method for validating passwords, emails and user IDs. Removed a lot of commented out code and cleaned up code in CreateLoginActivity.

--- a/Phone/main/res/layout/header_progress_indication.xml
+++ b/Phone/main/res/layout/header_progress_indication.xml
@@ -3,12 +3,15 @@
 
     <RelativeLayout
         android:id="@+id/location_text"
-        style="@style/status_indicator_style" >
+        style="@style/status_indicator_style" 
+        android:paddingLeft="@dimen/forms_inner_padding"
+        android:paddingRight="@dimen/forms_inner_padding">
 
         <ImageView
             android:id="@+id/step1_confirm"
             android:layout_alignParentLeft="true"
-            style="@style/status_check_mark" />
+            style="@style/status_check_mark" 
+            android:layout_marginRight="@dimen/between_related_elements_padding"/>
 
         <LinearLayout
             android:id="@+id/step_1"
@@ -32,7 +35,8 @@
 
             <ImageView
                 android:id="@+id/middle_indicator"
-                style="@style/status_indicator_image"  />
+                style="@style/status_indicator_image"
+                android:layout_marginRight="@dimen/between_related_elements_padding"  />
 
             <TextView
                 android:id="@+id/step2_title"
@@ -48,7 +52,8 @@
 
             <ImageView
                 android:id="@+id/last_indicator"
-                style="@style/status_indicator_image" />
+                style="@style/status_indicator_image" 
+                android:layout_marginRight="@dimen/between_related_elements_padding"/>
 
             <TextView
                 android:id="@+id/step3_title"
