--- a/Phone/main/res/values/strings_account_info.xml
+++ b/Phone/main/res/values/strings_account_info.xml
@@ -19,10 +19,9 @@
 	</string>
 	
 	<!-- Account Info Screen 2 -->
-	<string name="account_info_two_step_text">Step 2 of 2: Create Account Login</string>
     <string name="account_info_two_id_detail_info_text">6&#8211;16 characters can contain most special characters except: (\"), (\'), (\\) and spaces.</string>
-	<string name="account_info_two_create_id_text">New User ID:</string>
-	<string name="account_info_two_pass_text">New Password:</string>
+	<string name="account_info_two_create_id_text">New User ID</string>
+	<string name="account_info_two_pass_text">New Password</string>
 	<string name="account_info_two_pass_info_text">
 	    8&#8211;32 characters. At least one number. Case sensitive. Special characters can be used. 
 	    Password is used for Account Center home.
@@ -32,16 +31,16 @@
 	    You\'ll be sent an email confirming your online account registration.
 	</string>
 	
-	<string name="account_info_two_confirm_id_text">Confirm User ID:</string>
-	<string name="account_info_two_id_strength_text">User ID Strength:</string>
-	<string name="account_info_two_pass_strength_text">Password Strength:</string>
-	<string name="account_info_two_pass_confirm_text">Confirm Password:</string>
-	<string name="account_info_two_email_text">Email Address:</string>
+	<string name="account_info_two_confirm_id_text">Confirm User ID</string>
+	<string name="account_info_two_id_strength_text">User ID Strength</string>
+	<string name="account_info_two_pass_strength_text">Password Strength</string>
+	<string name="account_info_two_pass_confirm_text">Confirm Password</string>
+	<string name="account_info_two_email_text">Email Address</string>
 	<string name="account_info_two_id_matches_pass_error_text">User ID and password must not be the same.</string>
 	<string name="account_info_two_username_in_use_error_text">User ID is already in use. Please choose another one.</string>
-	<string name="account_info_two_passwords_dont_match_text">Passwords do not match.</string>
+	<string name="account_info_two_passwords_dont_match_text">Passwords must match.</string>
 	<string name="account_info_two_ids_must_match_text">User IDs must match.</string>
-	<string name="account_info_two_new_pass_confirm_text">
-	    Confirm New Password:
-	</string>
+	<string name="account_info_two_new_pass_confirm_text">Confirm New Password</string>
+	<string name="strength_text">Strength</string>
+	
 </resources>
