--- a/Phone/main/res/values/styles.xml
+++ b/Phone/main/res/values/styles.xml
@@ -174,7 +174,7 @@
     <!-- 5. BODY COPY / #3d484d / 34px font-size / 42px line-height / regular -->
     <style name="body_copy" parent="discover_text">
         <item name="android:textAppearance">?android:attr/textAppearanceMedium</item>
-        <item name="android:textColor">#3d484d</item>
+        <item name="android:textColor">@color/body_copy</item>
         <item name="android:typeface">normal</item>
     </style>
 
@@ -191,26 +191,26 @@
     
     <style name="sub_copy" parent="discover_text">
         <item name="android:textSize">24sp</item>
-        <item name="android:textColor">#576166</item>
+        <item name="android:textColor">@color/sub_copy</item>
     </style>
 
     <style name="field_copy" parent="discover_text">
         <item name="android:textAppearance">?android:attr/textAppearanceMedium</item>
-        <item name="android:textColor">#8a9499</item>
+        <item name="android:textColor">@color/field_copy</item>
     </style>
     
     <style name="field_copy_small" parent="discover_text">
         <item name="android:textAppearance">?android:attr/textAppearanceSmall</item>
-        <item name="android:textColor">#8a9499</item>
+        <item name="android:textColor">@color/field_copy</item>
     </style>
     
     <style name="field_stroke" parent="discover_text">
         <item name="android:textAppearance">?android:attr/textAppearanceMedium</item>
-        <item name="android:textColor">#dce3e5</item>
+        <item name="android:textColor">@color/field_stroke</item>
     </style>
 
     <style name="error_label" parent="discover_text">
-        <item name="android:textColor">#ed1c24</item>
+        <item name="android:textColor">@color/error_indicator</item>
         <item name="android:visibility">gone</item>     
 		<item name="android:textSize">@dimen/body_copy_min</item>
     </style>
@@ -270,7 +270,7 @@
     </style>
     
      <style name="error_label_small" parent="discover_text">
-        <item name="android:textColor">#ed1c24</item>
+        <item name="android:textColor">@color/error_indicator</item>
         <item name="android:visibility">gone</item>     
 		<item name="android:textSize">14sp</item>
 
@@ -349,7 +349,7 @@
     <!-- 1-800-347-2683 NUMBER LINK / #0267b1 / 34pt / regular -->
     <style name="need_help_number_link" parent="body_copy">
         <item name="android:textAppearance">?android:attr/textAppearanceSmall</item>
-        <item name="android:textColor">#0267b1</item>
+        <item name="android:textColor">@color/blue_link</item>
     </style>
 
     <!-- Status Indicator Styles -->
