--- a/Phone/main/res/layout/section_account_summary_landing.xml
+++ b/Phone/main/res/layout/section_account_summary_landing.xml
@@ -2,10 +2,27 @@
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:background="@drawable/light_gray_bkgrd"
     android:orientation="vertical"
-    android:background="@drawable/light_gray_bkgrd" >
+    android:padding="15dp" 
+    android:paddingTop="7dp">
+
+    <include 
+        layout="@layout/general_list_item"
+        android:id="@+id/home_current_balance"/>
     
+    <include 
+        layout="@layout/general_list_item"
+        android:id="@+id/home_last_statement"/>
     
+    <include 
+        layout="@layout/general_list_item"
+        android:id="@+id/home_bonus_balance"/>
+    
+    <include 
+        layout="@layout/general_list_item_simple"
+        android:id="@+id/home_bonus_offer"/>
+    <!--
     <ListView 
         android:id="@+id/account_summary_items"
         android:layout_width="match_parent"
@@ -13,5 +30,6 @@
         android:layout_margin="15dp"
         android:layout_marginTop="5dp"
         android:background="#ffffff"/>
+    -->
 
 </LinearLayout>
