ID: US4666 - Lockout Temporary US4669 - Scheduled Maintenance US4670 - Unscheduled Maintenance
Tested:
US4666 - Verified message displayed is extracted from 403 JSON Error Response
US4666 - Navigate to Temporary Lock out screen when receiving a 403 Forbidden using Mock Service
US4666 - Navigate back to the Login screen when user presses back hardware key
US4666 - Navigate back to the Login screen when user presses OK
US4666 - User taps help number opens dialer with number pre-populated
US4666 - Supports landscape orientation
US4666 - When user navigates away from app and comes back, via home key, the application display the Temporary Lock out screen, if it was open when user navigated away.

Tested:
US4669/US4670 - Verified message displayed is extracted from 503 JSON Error Response
US4669/US4670 - Verified any number in the message is clickable and opens the dialer
US4669/US4670 - Verified Help String for CARD and BANK are different.
US4669/US4670 - Verified Application will close when user dismisses an error System Maintenance modal, if it was a response to a Pre-Auth request
US4669/US4670 - Verified Application will close when user presses back on an error System Maintenance modal, if it was a response to a Pre-Auth request
US4669/US4670 - Verified OK Button works as back button does
US4669/US4670 - Verified help link dials numbers

--- a/Phone/main/res/values/errors_http_only.xml
+++ b/Phone/main/res/values/errors_http_only.xml
@@ -2,6 +2,7 @@
     <!--General HTTP Error Strings  -->
     <string name="error_500_title">We\'re Currently Performing System Maintenance</string>
     <string name="error_503_title">We\'re Currently Performing System Maintenance</string>
+    <string name="error_403_title">You\'ve Been Locked Out</string>
     
     <!--Card HTTP Error Strings  -->
 	<string name="error_401">Sorry. The User ID and/or Password does not match our records, or you are not registered. Please try again.</string>
@@ -15,5 +16,5 @@
 	<!-- Default Bank HTTP Error Strings. Note Error Strings for bank are provided in the error response, these are in case they are not  -->
 	<string name="bank_error_500_message">We are currently performing system maintenance. We are working to keep the app running smoothly; unfortunately, this means your request cannot be completed at this time\n\nPlease try again on Sunday after 6am ET or on Monday-Saturday after 4am ET.</string>
 	<string name="bank_error_503_message">We are currently performing system maintenance. We are working to keep the app running smoothly; unfortunately, this means your request cannot be completed at this time\n\nPlease try again on Sunday after 6am ET or on Monday-Saturday after 4am ET.</string>
-	
+	<string name="bank_error_403_message">We know you\'re excited to get into the app, but you\'ve tried to log in with the wrong username or password too many times. Contact us by phone to regain access to your account.</string>
 </resources>
