--- a/Phone/main/res/layout/modal_default_top_view.xml
+++ b/Phone/main/res/layout/modal_default_top_view.xml
@@ -30,6 +30,7 @@
 	        android:id="@+id/modal_alert_text"
 	        android:layout_width="wrap_content"
 	        android:layout_height="wrap_content"
+	        android:autoLink="all"
 	        android:layout_below="@+id/modal_alert_title"
 	        style="@style/modal_content_text"/>
 	    
@@ -37,7 +38,7 @@
                 android:layout_width="fill_parent"
                 android:layout_height="wrap_content"
                 android:layout_below="@+id/modal_alert_text"
-                android:layout_marginTop="@dimen/abs__action_bar_default_height">
+                android:layout_marginTop="@dimen/modal_footer_topmargin">
                 
                 <include layout="@layout/old_general_need_help_footer" />
         </RelativeLayout> 
