US3698 : TA8742 - Forgot both step 1 tested to be working. Updated with strong auth handling and added a secondary server side error label in step 2. Tested flow through step 1 to step 3 to be working.

--- a/Phone/main/res/layout/register_create_credentials.xml
+++ b/Phone/main/res/layout/register_create_credentials.xml
@@ -33,19 +33,8 @@
                 style="@style/body_copy"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:layout_below="@+id/account_info_main_error_label"
+                android:layout_below="@+id/account_info_error_label_two"
                 android:text="@string/account_info_two_create_id_text" />
-
-            <TextView
-                android:id="@+id/account_information_input_info_label"
-                style="@style/sub_copy_small"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_alignLeft="@+id/account_info_label_one_label"
-                android:layout_below="@+id/account_info_error_label"
-                android:layout_marginTop="@dimen/between_related_elements_padding"
-                android:text="@string/account_info_two_id_detail_info_text"
-                android:textAppearance="?android:attr/textAppearanceSmall" />
 
             <TextView
                 android:id="@+id/account_info_error_label"
@@ -53,6 +42,14 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_below="@+id/account_info_two_id_field" />
+
+            <TextView
+                android:id="@+id/account_info_error_label_two"
+                style="@style/error_label"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_below="@+id/account_info_main_error_label"
+                android:layout_marginTop="@dimen/between_related_elements_padding" />
 
             <TextView
                 android:id="@+id/account_info_two_id_strength_bar_label"
@@ -63,6 +60,17 @@
                 android:layout_alignRight="@+id/account_info_two_id_field"
                 android:layout_marginRight="@dimen/table_inner_padding"
                 android:text="@string/strength_text" />
+
+            <TextView
+                android:id="@+id/account_information_input_info_label"
+                style="@style/sub_copy_small"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_alignLeft="@+id/account_info_label_one_label"
+                android:layout_below="@+id/account_info_two_id_field"
+                android:layout_marginTop="@dimen/between_related_elements_padding"
+                android:text="@string/account_info_two_id_detail_info_text"
+                android:textAppearance="?android:attr/textAppearanceSmall" />
 
             <com.discover.mobile.login.register.CredentialStrengthEditText
                 android:id="@+id/account_info_two_id_field"
